--- a/menu-pages/breakfast.html
+++ b/menu-pages/breakfast.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/all.min.css">
     <style>
         body {
             background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/breakfast.jpeg);
@@ -27,12 +27,12 @@
             <h1>Skyline<span style="color:rgb(255, 255, 255)">Cafe</span></h1>
         </div>
         <ul class="nav-menu show">
-            <li><a href="./index.html">HOME</a></li>
+            <li><a href="../index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="../log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <header>
@@ -44,10 +44,10 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Africantea.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Tea</h5>
+                        <span class="item-name">Tea</span>
                         <p>An aromatic beverage commonly prepared by pouring 
                             hot or boiling water over cured leaves of the Camellia sinensis, an evergreen
                             shrub native to East Asia.</p>
@@ -59,10 +59,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Cereals.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Cereals with fruits</h5>
+                        <span class="item-name">Cereals with fruits</span>
                         <p>Full of beautiful colors, juicy fruits, and hearty toppings,
                             this Healthy Fruit Cereal is a fun and delicious way to enjoy cereal in the morning!</p>
                         <span class="item-price">Shs12000</span>
@@ -73,10 +73,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/coffee.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Coffee</h5>
+                        <span class="item-name">Coffee</span>
                         <p>Freshly brewed African coffee that is served with a snack of your choice.</p>
                         <span class="item-price">Shs7000</span>
                     </div>
@@ -86,10 +86,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Friedeggs.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Friedeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Fried eggs</h5>
+                        <span class="item-name">Fried eggs</span>
                         <p>The crispy olive oil fried egg. These fried eggs have golden, lacy,
                             crispy edges, which contrast beautifully with their runny yellow yolks.</p>
                         <span class="item-price">Shs8500</span>
