--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/landing.jpeg);
+            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../main-images/landing.jpeg);
             background-size: cover;
             background-position: center;
             background-attachment:fixed;
