--- a/menu-pages/breakfast.html
+++ b/menu-pages/breakfast.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/breakfast.jpeg);
+            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../main-images/breakfast.jpeg);
             background-size: cover;
             background-position: center;
             background-attachment:fixed;
@@ -100,7 +100,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Milk.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Milk.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Milk</h5>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/omlette.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/omlette.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Omelette</h5>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/pancakes.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/pancakes.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Pancakes</h5>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Scrambledeggs.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Scrambledeggs.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Scrambled eggs</h5>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Breakfast/Toast.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Breakfast/Toast.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">French or American Toast</h5>
@@ -194,10 +194,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="../menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="../menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="../menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="../menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
