--- a/menu-pages/dessert.html
+++ b/menu-pages/dessert.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <script src="/js/menu.js" async></script>
+    <link rel="stylesheet" href="../css/all.min.css">
+    <script src="../js/menu.js" async></script>
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/dessert4.jpeg);
+            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../main-images/dessert4.jpeg);
             background-size: cover;
             background-position: center;
             background-attachment:fixed;
@@ -28,12 +28,12 @@
             <h1>Skyline<span style="color:rgb(255, 255, 255)">Cafe</span></h1>
         </div>
         <ul class="nav-menu show">
-            <li><a href="./index.html">HOME</a></li>
+            <li><a href="../index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="../log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <header>
@@ -45,7 +45,7 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Mixed berry mousse</span>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Carrot cake</span>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Re-invented cheesecake</span>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Matcha cake</span>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Tea and herbal tea ice cream</span>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Blondie with vanilla ice cream</span>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">Vegan chocolate cake</span>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="/other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
                         <span class="item-name">XL lemon meringue pie</span>
@@ -175,10 +175,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="../menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="../menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="../menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="../menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
