--- a/menu-pages/food.html
+++ b/menu-pages/food.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/lunch.jpeg);
+            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../main-images/lunch.jpeg);
             background-size: cover;
             background-position: center;
             background-attachment:fixed;
@@ -27,12 +27,12 @@
             <h1>Skyline<span style="color:rgb(255, 255, 255)">Cafe</span></h1>
         </div>
         <ul class="nav-menu">
-            <li><a href="./index.html">HOME</a></li>
+            <li><a href="../index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="../log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <header>
@@ -44,10 +44,10 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/berry-mousse.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Creamy mushroom soup</h5>
+                        <span class="item-name">Creamy mushroom soup</span>
                         <p>Cream of mushroom, infused with black peppercorn & parsley. Served with crispy baguette slices.</p>
                         <span class="item-price">Shs16000</span>
                     </div>
@@ -57,10 +57,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/Blackforest-Cake.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Blackforest-Cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Baked chicken drumsticks and potato wedges</h5>
+                        <span class="item-name">Baked chicken drumsticks and potato wedges</span>
                         <p></p>
                         <span class="item-price">Shs25000</span>
                     </div>
@@ -70,10 +70,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/carrot-cake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Beef burger with fries</h5>
+                        <span class="item-name">Beef burger with fries</span>
                         <p></p>
                         <span class="item-price">Shs15000</span>
                     </div>
@@ -83,10 +83,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Cheesecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Cheese fries</h5>
+                        <span class="item-name">Cheese fries</span>
                         <p></p>
                         <span class="item-price">Shs12000</span>
                     </div>
@@ -96,10 +96,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Matcha-cake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Chicken Wrap</h5>
+                        <span class="item-name">Chicken Wrap</span>
                         <p></p>
                         <span class="item-price">Shs16000</span>
                     </div>
@@ -109,10 +109,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/tea-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Chicken Biryani</h5>
+                        <span class="item-name">Chicken Biryani</span>
                         <p></p>
                         <span class="item-price">Shs23000</span>
                     </div>
@@ -122,10 +122,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/vanilla-icecream.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Club Sandwich</h5>
+                        <span class="item-name">Club Sandwich</span>
                         <p></p>
                         <span class="item-price">Shs20000</span>
                     </div>
@@ -135,10 +135,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/Vegan-Chocolatecake.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Honey Mustard Porkchops</h5>
+                        <span class="item-name">Honey Mustard Porkchops</span>
                         <p></p>
                         <span class="item-price">Shs32000</span>
                     </div>
@@ -148,10 +148,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/dessert/xl-meringue-pie.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Pasta</h5>
+                        <span class="item-name">Pasta</span>
                         <p></p>
                         <span class="item-price">Shs13500</span>
                     </div>
@@ -187,10 +187,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="../menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="../menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="../menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="../menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
