--- a/log-pages/signin.html
+++ b/log-pages/signin.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".sign.css">
+    <link rel="stylesheet" href="..sign.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><a href="./index.html">SkylineCafe</a></h1>
+    <h1><a href="../index.html">SkylineCafe</a></h1>
     <div class="Register">
         <h2>SIGN IN </h2>
         <label for="email">Email</label><br>
@@ -16,7 +16,7 @@
         <input type="password" placeholder="Enter Password" name="psw" required><br><br>
         <button type="submit">Sign In</button>
         <hr>
-        <p>Not signed up? <a href=".sign.css">Sign Up Here</a></p> 
+        <p>Not signed up? <a href="..sign.css">Sign Up Here</a></p> 
     </div>
 </body>
 </html>
