--- a/menu-pages/drinks.html
+++ b/menu-pages/drinks.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/all.min.css">
     <style>
         body {
-            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(/main-images/drinks.jpeg);
+            background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../main-images/drinks.jpeg);
             background-size: cover;
             background-position: center;
             background-attachment:fixed;
@@ -28,12 +28,12 @@
             <h1>Skyline<span style="color:rgb(255, 255, 255)">Cafe</span></h1>
         </div>
         <ul class="nav-menu">
-            <li><a href="./index.html">HOME</a></li>
+            <li><a href="../index.html">HOME</a></li>
             <li><a href="#">MENU</a></li>
             <li><a href="#">CONTACT US</a></li>
         </ul>
         <ul class="search-icon">
-            <li><a href="./log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
+            <li><a href="../log-pages/signin.html"><i class="fas fa-user"></i> Log In</a></li>
         </ul>
     </nav>
     <header>
@@ -45,10 +45,10 @@
             <section class="menu-list">
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/Soda.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/Soda.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Soft drinks</h5>
+                        <span class="item-name">Soft drinks</span>
                         <p>A range of different carbonated soft drinks;</p>
                         <span class="item-price">Shs15000</span>
                     </div>
@@ -58,10 +58,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/CookiesandCreamMilkshake.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/CookiesandCreamMilkshake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Cookies and Cream Milkshake</h5>
+                        <span class="item-name">Cookies and Cream Milkshake</span>
                         <p></p>
                         <span class="item-price">Shs16000</span>
                     </div>
@@ -71,10 +71,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/LemoMojito.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/LemoMojito.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Lemon Mojito</h5>
+                        <span class="item-name">Lemon Mojito</span>
                         <p></p>
                         <span class="item-price">Shs20000</span>
                     </div>
@@ -84,10 +84,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/HotChocolate.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/HotChocolate.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Hot Chocolate</h5>
+                        <span class="item-name">Hot Chocolate</span>
                         <p>Hot chocolate made with steamed whole or nonfat milk, rich chocolate syrup and topped with whipped topping and chocolate drizzle.</p>
                         <span class="item-price">Shs15000</span>
                     </div>
@@ -97,10 +97,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/StrawberryBananaSmoothie.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/StrawberryBananaSmoothie.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Strawberry Banana Smoothie</h5>
+                        <span class="item-name">Strawberry Banana Smoothie</span>
                         <p>Strawberry Banana Smoothie is made with the perfect combination of fruit purees and juices, such as strawberry and banana, blended with creamy low fat yogurt and ice.</p>
                         <span class="item-price">Shs16000</span>
                     </div>
@@ -110,10 +110,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/MangoPineappleMilkshake.png" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/MangoPineappleMilkshake.png" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Mango Pineapple Smoothie</h5>
+                        <span class="item-name">Mango Pineapple Smoothie</span>
                         <p>Mango Pineapple Smoothie made with the sweet combination of fruit purees and juices, such as mango and pineapple, blended with creamy low fat yogurt and ice.</p>
                         <span class="item-price">Shs16000</span>
                     </div>
@@ -123,10 +123,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/HibiscusRoseLatte.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/HibiscusRoseLatte.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Rose Latte</h5>
+                        <span class="item-name">Rose Latte</span>
                         <p>Hot latte made with steamed whole or nonfat milk, rich hibiscus syrup.</p>
                         <span class="item-price">Shs13000</span>
                     </div>
@@ -136,10 +136,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/IcedCoffee.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/IcedCoffee.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Iced Coffee</h5>
+                        <span class="item-name">Iced Coffee</span>
                         <p>Refreshingly cool and made with 100% Arabica beans, cream and your choice of flavored syrups – caramel, hazelnut, French vanilla and sugar-free French vanilla</p>
                         <span class="item-price">Shs15000</span>
                     </div>
@@ -149,10 +149,10 @@
                 </div>
                 <div class="list-b1">
                     <div class="img">
-                        <img src="./other-images/Drinks/IcedTea.jpeg" alt="mixed berry mousse" class="item-img">
+                        <img src="../other-images/Drinks/IcedTea.jpeg" alt="mixed berry mousse" class="item-img">
                     </div>
                     <div class="item-d">
-                        <span class="item-name">Iced Tea</h5>
+                        <span class="item-name">Iced Tea</span>
                         <p>Iced Tea, freshly brewed with a brisk blend of orange pekoe and pekoe cut black tea, served ice cold.</p>
                         <span class="item-price">Shs15000</span>
                     </div>
@@ -188,10 +188,10 @@
             <div class="footer-content">
                 <h4>Menu</h4>
                 <ul class="menu-footer-list">
-                    <li><a href="./menu-pages/breakfast.html">Breakfast Menu</a></li>
-                    <li><a href="./menu-pages/food.html">Foods Menu</a></li>
-                    <li><a href="./menu-pages/dessert.html">Dessert Menu</a></li>
-                    <li><a href="./menu-pages/drinks.html">Drinks Menu</a></li>
+                    <li><a href="../menu-pages/breakfast.html">Breakfast Menu</a></li>
+                    <li><a href="../menu-pages/food.html">Foods Menu</a></li>
+                    <li><a href="../menu-pages/dessert.html">Dessert Menu</a></li>
+                    <li><a href="../menu-pages/drinks.html">Drinks Menu</a></li>
                 </ul>
             </div>
             <div class="footer-content">
